--- a/Fuel-Front-End/src/app/profile/profile.component.html
+++ b/Fuel-Front-End/src/app/profile/profile.component.html
@@ -39,7 +39,7 @@
                           <div class="row">
                           <div class="col-12">
                               <label for="full_name"><h4>Full name</h4></label>
-                              <input type="text" class="form-control" name="full_name" id="full_name" placeholder="Enter your full name" title="enter your full name." maxlength="50" required>
+                              <input type="text" class="form-control" name="full_name" id="full_name" placeholder="Enter your full name" title="enter your full name." maxlength="50" required/>
                           </div>
                           </div>
                       </div>
@@ -137,8 +137,6 @@
                             </div>
                       </div>
               	</form>
-              
-            
         </div><!--/col-9-->
     </div><!--/row-->
                                                       
