minor-fix-on-contact-page

--- a/Fuel-Front-End/src/app/contactUs/contactUs.component.html
+++ b/Fuel-Front-End/src/app/contactUs/contactUs.component.html
@@ -32,9 +32,9 @@
         <ul class="contact-list">
           <li class="list-item"><i class="fa fa-map-marker fa-2x"><span class="contact-text place"> Seattle | WA</span></i></li>
 
-          <li class="list-item"><i class="fa fa-phone fa-2x"><span class="contact-text phone"><a href="tel:1-212-555-5555" title="Give me a call"> (212) 555-2368</a></span></i></li>
+          <li class="list-item"><i class="fa fa-phone fa-2x"><span class="contact-text phone"><a class="a-list-item" href="tel:1-212-555-5555" title="Give me a call"> (212) 555-2368</a></span></i></li>
 
-          <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a href="mailto:#" title="Send me an email"> EmailUs@gmail.com</a></span></i></li>
+          <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a class="a-list-item" href="mailto:#" title="Send me an email"> EmailUs@nnp.com</a></span></i></li>
         </ul>
         <hr>
         <ul class="social-media-list">
@@ -46,7 +46,6 @@
           </li>
         </ul>
         <hr>
-
         <div class="copyright">&copy; ALL OF THE RIGHTS RESERVED</div>
       </div>
       <div class="col-md-3 col-sm-3 col-xs-12"></div>
