--- a/Fuel-Front-End/src/app/contactUs/contactUs.component.css
+++ b/Fuel-Front-End/src/app/contactUs/contactUs.component.css
@@ -1,6 +1,6 @@
 .contact-us-section {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     /*linear-gradient background color to make it darker */
     background: linear-gradient(rgba(0, 0, 0, 0.2)), url(/assets/images/oil_company_background.jpg);
     /*Scale image nicely */
@@ -15,6 +15,7 @@
 }
 
 .contact-us-text {
+    margin-top: 30px;
     font-size: 2.5em;
     padding-top: 20px;
     line-height: 2em;
@@ -34,4 +35,9 @@
 /* Get in touch button effect */
 .get_in_touch_btn:hover, .get_in_touch_btn:active{
     opacity: 1;
+}
+.a-list-item {
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
 }
