updated-navbar-using-routerlink

--- a/Fuel-Front-End/src/app/aboutUs/aboutUs.component.html
+++ b/Fuel-Front-End/src/app/aboutUs/aboutUs.component.html
@@ -1,4 +1,4 @@
-<div class="about-us-section container-fluid">
+<div class="about-us-section container-fluid text-white text-center">
   <div class="NNP-company-logo">
     <img id="NNP-pic" src="assets/images/NNP_LOGO.png" alt="NNP_Logo_pic">
 </div>
