--- a/Fuel-Front-End/src/app/contactUs/contactUs.component.html
+++ b/Fuel-Front-End/src/app/contactUs/contactUs.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid text-center contact-us-section">
+<div class="container-fluid text-center contact-us-section text-white text-center">
   <div class="contact-div-section mx-auto">
   <p class="contact-us-text">We'd love to hear from you</p>
   <p>Whether you have a question about features, pricing, delivery, or anything else, our team is ready to answer all your questions</p>
