--- a/Fuel-Front-End/src/app/profile/profile.component.html
+++ b/Fuel-Front-End/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="container pt-3">
+<div class="container-fluid pt-3 text-white text-center profile-img">
     <div class="row my-3">
         <div class="col-sm-3"></div>
         <div class="col-sm-9"><h1>Hi, Thuy Nguyen</h1>
@@ -139,4 +139,7 @@
               	</form>
         </div><!--/col-9-->
     </div><!--/row-->
+    </div>
+    </div>
+    </div>
                                                       
