--- a/Fuel-Front-End/src/app/quotesPage/quotesPage.component.css
+++ b/Fuel-Front-End/src/app/quotesPage/quotesPage.component.css
@@ -8,3 +8,13 @@
     -moz-box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
     box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
 }
+.quote-img {
+    width: 100%;
+    height: 100vh;
+    /*linear-gradient background color to make it darker */
+    background: linear-gradient(rgba(0, 0, 0, 0.2)), url(/assets/images/home_background.jpeg);
+    /*Scale image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
