--- a/Fuel-Front-End/src/app/login/login.component.css
+++ b/Fuel-Front-End/src/app/login/login.component.css
@@ -1,7 +1,4 @@
-.bg{
- width: 100%;
- height: 100%;
-}
+
 .form-container{
     border:0px solid #fff; 
     padding:50px 60px;
@@ -10,4 +7,14 @@
     -webkit-box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
     -moz-box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
     box-shadow: -1px 4px 20px 11px rgba(0,0,0,0.75);
+}
+.login-img {
+    width: 100%;
+    height: 100%;
+    /*linear-gradient background color to make it darker */
+    background: linear-gradient(rgba(0, 0, 0, 0.2)), url(/assets/images/home_background.jpeg);
+    /*Scale image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
