--- a/Fuel-Front-End/src/app/login/login.component.html
+++ b/Fuel-Front-End/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="text-white text-center login-img">
 <img src="/assets/images/NNP_LOGO.png">
 <p style="font-size: 2.5em; padding-top: 10px;"><b>Welcome back</b></p>
 <div class="container-fluid">
@@ -26,4 +27,5 @@
       </div>
       <div class="col-md-4 col-sm-4 col-xs-12"></div>
     </div>
+</div>
 </div>
