--- a/Fuel-Front-End/src/app/registration/registration.component.html
+++ b/Fuel-Front-End/src/app/registration/registration.component.html
@@ -1,6 +1,6 @@
+<div class="register-img text-white text-center">
 <img src="/assets/images/NNP_LOGO.png">
 <p style="font-size: 2.5em; padding-top: 5px;"><b>Welcome to NNP</b></p>
-
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-4 col-sm-4 col-xs-12"></div>
@@ -34,4 +34,5 @@
       </div>
       <div class="col-md-4 col-sm-4 col-xs-12"></div>
     </div>
+</div>
 </div>
