front-end-token-decode

--- a/Fuel-Front-End/src/app/navbar/navbar.component.html
+++ b/Fuel-Front-End/src/app/navbar/navbar.component.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-non-drop navbar-expand-lg navbar-dark" [ngClass]="{'navbar-drop': navbarOpen}">
+<nav class="navbar navbar-non-drop navbar-expand-lg navbar-dark">
     <a id ="navbar_NNP_brand" class="navbar-brand" href="#">
       <img src="/assets/images/NNP_LOGO.png" width="70" height="70">
     </a>
     <button class="navbar-toggler" type="button">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }">
+    <div class="collapse navbar-collapse">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item px-3 py-2">
               <a  routerLink="/home" class="nav-link m-2 menu-item" href="#top">Home</a>
