--- a/Fuel-Front-End/src/app/quotesPage/quotesPage.component.html
+++ b/Fuel-Front-End/src/app/quotesPage/quotesPage.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid pt-3 text-white quote-img">
     <div class="row my-3">
-        <div class="mx-auto text-center"><h1>Hi, Thuy Nguyen</h1>
+        <div class="mx-auto text-center"><h1>Welcome {{authService.decodedToken?.unique_name | titlecase}},</h1>
         <h5 class="p-3">Please fill in the form below to get your quote done</h5></div>
     </div>
     <div class="row">
