--- a/Fuel-Front-End/src/app/login/login.component.html
+++ b/Fuel-Front-End/src/app/login/login.component.html
@@ -22,6 +22,7 @@
             </label>
           </div>
           <button [disabled]="!loginForm.valid" type="submit" class="btn btn-info btn-block">Submit</button>
+          <div *ngIf="wrongPassword" class="mt-3 bg-light text-danger text-bold"><p>You have entered an invalid username or password.</p></div>
         </form>
         <!--form -->
       </div>
