--- a/Fuel-Front-End/src/app/profile/profile.component.html
+++ b/Fuel-Front-End/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid pt-3 text-white text-center profile-img">
     <div class="row my-3">
         <div class="col-sm-3"></div>
-        <div class="col-sm-9"><h1>Hi, Thuy Nguyen</h1>
+        <div class="col-sm-9"><h1>Welcome</h1>
         <h5 class="p-3">Please complete your profile before starting your first quote</h5></div>
     	<!-- <div class="col-sm-2"><img style="border-radius: 50%; height: 70px; width: 70px;" src="assets/images/user_icon.jpeg"></div> -->
     </div>
