--- a/Fuel-Front-End/src/app/registration/registration.component.html
+++ b/Fuel-Front-End/src/app/registration/registration.component.html
@@ -38,6 +38,10 @@
             </label>
           </div>
           <button [disabled] ="form.invalid" type="submit" class="btn btn-info btn-block" (click)="onSubmit()">Submit</button>
+          <div *ngIf="registerFailure" class="mt-3 bg-light text-danger text-bold"><p>Your username is already taken</p></div>
+          <div *ngIf="registerSuccess" class="py-1 text-success"><i class="fa fa-check-circle" style="color: green"></i>
+            <span>Register successfully</span>
+          </div>
         </form>
         <!--form -->
       </div>
