--- a/Fuel-Front-End/src/app/profile/profile.component.html
+++ b/Fuel-Front-End/src/app/profile/profile.component.html
@@ -34,12 +34,16 @@
           <div class="tab-content">
             <div class="tab-pane active" id="home">
                 <hr>
-                  <form id="client_form" class="form" action="##" method="post">
+                  <form [formGroup] = "profileForm" id="client_form" class="form" action="##" method="post">
                       <div class="form-group">
                           <div class="row">
                           <div class="col-12">
                               <label for="full_name"><h4>Full name</h4></label>
-                              <input type="text" class="form-control" name="full_name" id="full_name" placeholder="Enter your full name" title="enter your full name." maxlength="50" required/>
+                              <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.fullname.invalid && profileForm.controls.fullname.touched">
+                                <i class="fa fa-times-circle" style="color: firebrick;"></i>
+                                <span class="text-danger bg-light">Full name cannot be empty</span>
+                              </div>
+                              <input formControlName="fullname" type="text" class="form-control" name="full_name" id="full_name" placeholder="Enter your full name" maxlength="50" required/>
                           </div>
                           </div>
                       </div>
@@ -47,7 +51,11 @@
                           <div class="row">
                           <div class="col-12">
                               <label for="phone"><h4>Address 1</h4></label>
-                              <input type="text" class="form-control" name="phone" id="phone" placeholder="Enter your address" title="enter your address." maxlength="100" required>
+                              <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.address1.invalid && profileForm.controls.address1.touched">
+                                <i class="fa fa-times-circle" style="color: firebrick;"></i>
+                                <span class="text-danger bg-light">Address 1 cannot be empty</span>
+                              </div>
+                              <input formControlName="address1" type="text" class="form-control" name="phone" id="phone" placeholder="Enter your address" maxlength="100" required>
                           </div>
                           </div>
                       </div>
@@ -56,19 +64,27 @@
                         <div class="row">
                         <div class="col-12">
                             <label for="phone"><h4>Address 2</h4></label>
-                            <input type="text" class="form-control" name="phone" id="phone" placeholder="Enter your second address (optional)" title="enter your address." maxlength="100">
+                            <input formControlName="address2" type="text" class="form-control" name="phone" id="phone" placeholder="Enter your second address (optional)" maxlength="100">
                         </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="row">
-                        <div class="col-4">
+                        <div class="col-5">
                             <label for="first_name"><h4>City</h4></label>
-                            <input type="text" class="form-control" name="first_name" id="first_name" placeholder="City" title="enter your first name if any." maxlength="100" required>
+                            <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.city.invalid && profileForm.controls.city.touched">
+                              <i class="fa fa-times-circle" style="color: firebrick;"></i>
+                              <span class="text-danger bg-light">City cannot be empty</span>
+                            </div>
+                            <input formControlName="city" type="text" class="form-control" name="first_name" id="first_name" placeholder="City"  maxlength="100" required>
                         </div>
-                        <div class="col-4">
+                        <div class="col-2">
                             <label for="state"><h4>State</h4></label>
-                            <select style="height: 38px;" name="state" id="state" required>
+                            <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.state.invalid && profileForm.controls.state.touched">
+                              <i class="fa fa-times-circle" style="color: firebrick;"></i>
+                              <span class="text-danger bg-light">Please select a state</span>
+                            </div>
+                            <select formControlName="state" style="height: 38px;" name="state" id="state" required>
                                 <option value="" selected="selected">Select a State</option>
                                 <option value="AL">Alabama</option>
                                 <option value="AK">Alaska</option>
@@ -123,16 +139,20 @@
                                 <option value="WY">Wyoming</option>
                               </select>
                         </div>
-                        <div class="col-4">
+                        <div class="col-5">
                             <label for="zipcode"><h4>Zipcode</h4></label>
-                              <input type="text" class="form-control" name="zipcode" id="zipcode" placeholder="Enter zipcode" title="enter your zipcode." maxlength="9" minlength="5" required>
+                            <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.zipcode.invalid && profileForm.controls.zipcode.touched">
+                              <i class="fa fa-times-circle" style="color: firebrick;"></i>
+                              <span class="text-danger bg-light">Please enter a valid zipcode</span>
+                            </div>
+                              <input formControlName="zipcode" type="text" class="form-control" name="zipcode" id="zipcode" placeholder="Enter zipcode" title="enter your zipcode." maxlength="9" minlength="5" required>
                           </div>
                         </div>
                     </div>
                       <div class="form-group">
                            <div class="col-12">
                                 <br>
-                              	<button class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
+                              	<button (click)="onSubmit()" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
                                	<button class="btn btn-lg btn-dark mx-2" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
                             </div>
                       </div>
