--- a/Fuel-Front-End/src/app/navbar/navbar.component.html
+++ b/Fuel-Front-End/src/app/navbar/navbar.component.html
@@ -34,7 +34,7 @@
               <a href="#"><i class="nav-link icon-header navbar-brand fa fa-facebook fa-2x"></i></a>
               <a href="#"><i class="nav-link icon-header navbar-brand fa fa-twitter-square fa-2x"></i></a>
               <a href="#"><i class="nav-link icon-header navbar-brand fa fa-linkedin fa-2x"></i></a>
-              <a *ngIf="isLogin" routerLink="/profile" href="#"><img src="/assets/images/pro5.png" width="35" height="35"></a>
+              <a routerLink="/profile" href="#"><img src="/assets/images/pro5.png" width="35" height="35"></a>
             </li>
           </ul>
     </div>
