profile-quote-next

--- a/Fuel-Front-End/src/app/quotesPage/quotesPage.component.html
+++ b/Fuel-Front-End/src/app/quotesPage/quotesPage.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid pt-3 text-white quote-img">
     <div class="row my-3">
-        <div class="mx-auto text-center"><h1>Welcome {{authService.decodedToken?.unique_name | titlecase}},</h1>
+        <div class="mx-auto text-center"><h1>Welcome {{getFullName()}},</h1>
         <h5 class="p-3">Please fill in the form below to get your quote done</h5></div>
     </div>
     <div class="row">
@@ -47,7 +47,7 @@
                         <div class="col-3">
                           <label for="total_price"><h4>Total Amount Due</h4></label>
                           {{cal()}}
-                          <output align="left" type="number" class="form-control" name="total_price" id="total_price" >{{total}}</output>
+                          <output align = "left" type="number" class="form-control" name="total_price" id="total_price" >{{total}}</output>
                         </div>
                         <div class="col-10"></div>
                       </div>
