--- a/Fuel-Front-End/src/app/quotesPage/quotesPage.component.html
+++ b/Fuel-Front-End/src/app/quotesPage/quotesPage.component.html
@@ -25,7 +25,7 @@
                           <div class="row">
                           <div class="col-8">
                               <label for="delivery_address"><h4>Delivery Address</h4></label>
-                              <input readonly type="text" class="form-control" name="delivery_address" id="delivery_address" value="1245 Main Street Houston TX 77070">
+                              <input readonly type="text" class="form-control" name="delivery_address" id="delivery_address" value="{{address1}}">
                           </div>
                           <div class="col-4">
                             <label for="delivery_date"><h4>Delivery Date</h4></label>
