profile picture upload

--- a/Fuel-Front-End/src/app/profile/profile.component.css
+++ b/Fuel-Front-End/src/app/profile/profile.component.css
@@ -18,3 +18,9 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.avatar-pic {
+    vertical-align: middle;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
