--- a/Fuel-Front-End/src/app/profile/profile.component.html
+++ b/Fuel-Front-End/src/app/profile/profile.component.html
@@ -8,9 +8,10 @@
     <div class="row">
   		<div class="col-sm-3"><!--left col-->
       <div class="text-center">
-        <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar">
+        <img *ngIf="!profileCompleted" src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar">
+        <img *ngIf="profileCompleted" src="{{this.profileLocalStorage.photoURL}}" class="avatar img-circle img-thumbnail avatar-pic" alt="avatar">
         <h6>Upload photo.</h6>
-        <input type="file" class="text-center center-block file-upload">
+        <input type="file" (change)="onFileSelected($event)" class="text-center center-block file-upload">
       </div><br>
           <div class="panel panel-default">
             <div class="panel-heading">Website <i class="fa fa-link fa-1x"></i></div>
