--- a/Fuel-Front-End/src/app/history/history.component.html
+++ b/Fuel-Front-End/src/app/history/history.component.html
@@ -44,16 +44,6 @@
 								<option>Paris</option>								
 							</select>
 						</div>
-						<div class="filter-group">
-							<label>Status</label>
-							<select class="form-control">
-								<option>Any</option>
-								<option>Delivered</option>
-								<option>Shipped</option>
-								<option>Pending</option>
-								<option>Cancelled</option>
-							</select>
-						</div>
 						<span class="filter-icon"><i class="fa fa-filter"></i></span>
                     </div>
                 </div>
@@ -61,61 +51,23 @@
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-                        <th>#</th>
+						<th>Quote ID</th>
+						<th>Gallons Requested</th>
                         <th>Delivery Address</th>
-						<th>Gallons</th>
 						<th>Delivery Date</th>						
-                        <th>Status</th>						
-						<th>Total Amount</th>
-						<th>Action</th>
+                        <th>Suggested Price</th>						
+						<th>Amount Due</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td><a href="#"><img src="/examples/images/avatar/1.jpg" class="avatar" alt="Avatar"> 132 Calhoun, Houston TX 77557</a></td>
-						<td>1000</td>
-                        <td>Jun 15, 2019</td>                        
-						<td><span class="status text-success">&bull;</span> Delivered</td>
-						<td>$3000</td>
-						<td><a href="#" class="view" title="View Details" data-toggle="tooltip"><i class="material-icons">&#xE5C8;</i></a></td>
-                    </tr>
-					<tr>
-                        <td>2</td>
-                        <td><a href="#"><img src="/examples/images/avatar/2.jpg" class="avatar" alt="Avatar"> 132 Calhoun, Houston TX 77557</a></td>
-                        <td>2000</td>                       
-						<td>Jun 21, 2019</td>
-						<td><span class="status text-info">&bull;</span> Shipped</td>
-						<td>$6000</td>
-						<td><a href="#" class="view" title="View Details" data-toggle="tooltip"><i class="material-icons">&#xE5C8;</i></a></td>
-                    </tr>
-					<tr>
-                        <td>3</td>
-                        <td><a href="#"><img src="/examples/images/avatar/3.jpg" class="avatar" alt="Avatar"> 132 Calhoun, Houston TX 77557</a></td>
-						<td>1500</td>
-                        <td>Jul 04, 2019</td>
-                        <td><span class="status text-danger">&bull;</span> Cancelled</td>
-						<td>$4500</td>
-						<td><a href="#" class="view" title="View Details" data-toggle="tooltip"><i class="material-icons">&#xE5C8;</i></a></td>                        
-                    </tr>
-					<tr>
-                        <td>4</td>
-                        <td><a href="#"><img src="/examples/images/avatar/4.jpg" class="avatar" alt="Avatar"> 132 Calhoun, Houston TX 77557</a></td>
-						<td>3000</td>
-                        <td>Jul 16, 2019</td>						
-						<td><span class="status text-warning">&bull;</span> Pending</td>
-						<td>$9000</td>
-						<td><a href="#" class="view" title="View Details" data-toggle="tooltip"><i class="material-icons">&#xE5C8;</i></a></td>
-                    </tr>
-					<tr>
-                        <td>5</td>
-                        <td><a href="#"><img src="/examples/images/avatar/5.jpg" class="avatar" alt="Avatar"> 132 Calhoun, Houston TX 77557</a></td>
-						<td>5000</td>
-                        <td>Aug 04, 2019</td>
-						<td><span class="status text-success">&bull;</span> Delivered</td>
-						<td>$15000</td>
-						<td><a href="#" class="view" title="View Details" data-toggle="tooltip"><i class="material-icons">&#xE5C8;</i></a></td>
-                    </tr>
+					<ng-container *ngFor="let quote of this.data.user.quote" >
+						<tr><td>{{quote.id}}</td>
+						<td>{{quote.gallonsRequested}}</td>
+						<td>{{quote.deliveryAddress}}</td>
+						<td>{{quote.deliveryDate}}</td>
+						<td>{{quote.suggestedPrice}}</td>
+						<td>{{quote.amountDue}}</td>/<tr>
+					</ng-container>
                 </tbody>
             </table>
 			<div class="clearfix">
