--- a/Fuel-Front-End/src/app/history/history.component.html
+++ b/Fuel-Front-End/src/app/history/history.component.html
@@ -66,7 +66,7 @@
 						<td>{{quote.deliveryAddress}}</td>
 						<td>{{quote.deliveryDate}}</td>
 						<td>{{quote.suggestedPrice}}</td>
-						<td>{{quote.amountDue}}</td>/<tr>
+						<td>{{quote.amountDue}}</td></tr>
 					</ng-container>
                 </tbody>
             </table>
