--- a/Fuel-Front-End/src/app/quotesPage/quotesPage.component.html
+++ b/Fuel-Front-End/src/app/quotesPage/quotesPage.component.html
@@ -8,13 +8,13 @@
           <div class="tab-content">
             <div class="tab-pane active" id="home">
                 <hr>
-                  <form id="quote_form" class="form" action="##" method="post">
+                  <form #quoteForm ="ngForm" id="quote_form" class="form" (ngSubmit)="getQuote()">
 
                       <div class="form-group">
                           <div class="row">
                             <div class="col-4">
                               <label for="gallon_request"><h4>Gallons Request</h4></label>
-                              <input [(ngModel)]="gallon" (click)="cal()" type="number" class="form-control" name="gallon_request" id="gallon_request" placeholder="Enter amount of gallons" title="gallon_request" required>
+                              <input [(ngModel)]="newQuote.gallon" type="number" class="form-control" name="gallon" id="gallon_request" placeholder="Enter amount of gallons" title="gallon_request" required>
                             </div>
                           <div class="col-4">
                           </div>
@@ -25,19 +25,19 @@
                           <div class="row">
                           <div class="col-8">
                               <label for="delivery_address"><h4>Delivery Address</h4></label>
-                              <input readonly type="text" class="form-control" name="delivery_address" id="delivery_address" value="{{address1}}">
+                              <output type="number" class="form-control" name="total_price" id="total_price" >{{newQuote.address1}}</output>
                           </div>
                           <div class="col-4">
                             <label for="delivery_date"><h4>Delivery Date</h4></label>
-                            <input type="date" id="delivery_date" name="delivery_date" min="2020-03-20" max="2020-12-31" required>
+                            <input [(ngModel)]="this.newQuote.date" type="date" id="delivery_date" name="date" min="2020-03-20" max="2020-12-31" required>
                           </div>
                           </div>
                       </div>
                       <div class="form-group">
                       <div class="row">
                         <div class="col-3">
-                          <label for="suggested_price"><h4>Suggested Price</h4></label>
-                          <input readonly [(ngModel)]="price" type="number" class="form-control" name="suggested_price" id="suggested_price" placeholder="1220$">
+                          <label for="suggested_price"><h4>Suggested Price Per Gallon</h4></label>
+                          <output type="number" class="form-control" name="total_price" id="total_price" >{{newQuote.price}}</output>
                         </div>
                         <div class="col-10"></div>
                       </div>
@@ -46,8 +46,7 @@
                       <div class="row">
                         <div class="col-3">
                           <label for="total_price"><h4>Total Amount Due</h4></label>
-                          {{cal()}}
-                          <output align = "left" type="number" class="form-control" name="total_price" id="total_price" >{{total}}</output>
+                          <output type="number" class="form-control" name="total_price" id="total_price" >{{newQuote.amountDue}}</output>
                         </div>
                         <div class="col-10"></div>
                       </div>
@@ -55,7 +54,7 @@
                       <div class="form-group">
                            <div class="col-12">
                                 <br>
-                                <button class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Submit</button>
+                                <button [disabled]="!quoteForm.valid" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Quote</button>
                                  <button class="btn btn-lg btn-dark mx-2" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
                             </div>
                       </div>
