backward bug fix

--- a/Fuel-Front-End/src/app/history/history.component.html
+++ b/Fuel-Front-End/src/app/history/history.component.html
@@ -4,49 +4,17 @@
         <div class="table-wrapper">
             <div class="table-title">
                 <div class="row">
-                    <div class="col-sm-4">
-						<h2>Quotes <b>History</b></h2>
+                    <div style="text-transform: capitalize;" class="col-sm-4">
+						<h2>{{this.data.user.clientProfile.fullname+ "'s "}}Quotes <b>History</b></h2>
 					</div>
 					<div class="col-sm-8">						
-						<a href="#" class="btn btn-primary"><i class="material-icons">&#xE863;</i> <span>Refresh List</span></a>
-						<a href="#" class="btn btn-info"><i class="material-icons">&#xE24D;</i> <span>Export to Excel</span></a>
+						<a [routerLink]= "['/quote', username]"  class="btn btn-primary"><i class="material-icons">&#xE863;</i> <span>New Quote</span></a>
+						<a class="btn btn-info"><i class="material-icons">&#xE24D;</i> <span>Previous Quote</span></a>
 					</div>
                 </div>
             </div>
 			<div class="table-filter">
-				<div class="row">
-                    <div class="col-sm-3">
-						<div class="show-entries">
-							<span>Show</span>
-							<select class="form-control">
-								<option>5</option>
-								<option>10</option>
-								<option>15</option>
-								<option>20</option>
-							</select>
-							<span>entries</span>
-						</div>
-					</div>
-                    <div class="col-sm-9">
-						<button type="button" class="btn btn-primary"><i class="fa fa-search"></i></button>
-						<div class="filter-group">
-							<label></label>
-							<input type="text" class="form-control">
-						</div>
-						<div class="filter-group">
-							<label>Location</label>
-							<select class="form-control">
-								<option>All</option>
-								<option>Berlin</option>
-								<option>London</option>
-								<option>Madrid</option>
-								<option>New York</option>
-								<option>Paris</option>								
-							</select>
-						</div>
-						<span class="filter-icon"><i class="fa fa-filter"></i></span>
-                    </div>
-                </div>
+				<div class="row"></div>
 			</div>
             <table class="table table-striped table-hover">
                 <thead>
@@ -70,20 +38,6 @@
 					</ng-container>
                 </tbody>
             </table>
-			<div class="clearfix">
-                <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-                <ul class="pagination">
-                    <li class="page-item disabled"><a href="#">Previous</a></li>
-                    <li class="page-item"><a href="#" class="page-link">1</a></li>
-                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item"><a href="#" class="page-link">3</a></li>
-                    <li class="page-item active"><a href="#" class="page-link">4</a></li>
-                    <li class="page-item"><a href="#" class="page-link">5</a></li>
-					<li class="page-item"><a href="#" class="page-link">6</a></li>
-					<li class="page-item"><a href="#" class="page-link">7</a></li>
-                    <li class="page-item"><a href="#" class="page-link">Next</a></li>
-                </ul>
-            </div>
         </div>
     </div>     
 </body>                              		                            
