--- a/Fuel-Front-End/src/app/profile/profile.component.html
+++ b/Fuel-Front-End/src/app/profile/profile.component.html
@@ -153,7 +153,8 @@
                       <div class="form-group">
                            <div class="col-12">
                                 <br>
-                              	<button (click)="onSubmit()" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
+                                <button [disabled]="!profileForm.valid" *ngIf="!isEdit" (click)="onSubmit()" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
+                                <button *ngIf="isEdit" (click) ="clickEdit()" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Edit</button>
                                  <button class="btn btn-lg btn-dark mx-2" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
                             </div>
                       </div>
