--- a/Fuel-Front-End/src/app/profile/profile.component.html
+++ b/Fuel-Front-End/src/app/profile/profile.component.html
@@ -8,8 +8,7 @@
     <div class="row">
   		<div class="col-sm-3"><!--left col-->
       <div class="text-center">
-        <img *ngIf="!profileCompleted" src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar">
-        <img *ngIf="profileCompleted" src="{{this.profileLocalStorage.photoURL}}" class="avatar img-circle img-thumbnail avatar-pic" alt="avatar">
+        <img src="{{ this.userProfile.photoURL}}" class="avatar img-circle img-thumbnail avatar-pic" alt="avatar">
         <h6>Upload photo.</h6>
         <input type="file" (change)="onFileSelected($event)" class="text-center center-block file-upload">
       </div><br>
@@ -44,7 +43,7 @@
                                 <i class="fa fa-times-circle" style="color: firebrick;"></i>
                                 <span class="text-danger bg-light">Full name cannot be empty</span>
                               </div>
-                              <input formControlName="fullname" type="text" class="form-control" name="full_name" id="full_name" placeholder="Enter your full name" maxlength="50" required/>
+                              <input value="{{this.userProfile.fullname}}" formControlName="fullname" type="text" class="form-control" name="full_name" id="full_name" placeholder="Enter your full name" maxlength="50" required/>
                           </div>
                           </div>
                       </div>
@@ -56,7 +55,7 @@
                                 <i class="fa fa-times-circle" style="color: firebrick;"></i>
                                 <span class="text-danger bg-light">Address 1 cannot be empty</span>
                               </div>
-                              <input formControlName="address1" type="text" class="form-control" name="phone" id="phone" placeholder="Enter your address" maxlength="100" required>
+                              <input value="{{this.userProfile.address1}}" formControlName="address1" type="text" class="form-control" name="phone" id="phone" placeholder="Enter your address" maxlength="100" required>
                           </div>
                           </div>
                       </div>
@@ -65,7 +64,7 @@
                         <div class="row">
                         <div class="col-12">
                             <label for="phone"><h4>Address 2</h4></label>
-                            <input formControlName="address2" type="text" class="form-control" name="phone" id="phone" placeholder="Enter your second address (optional)" maxlength="100">
+                            <input value="{{this.userProfile.address2}}" formControlName="address2" type="text" class="form-control" name="phone" id="phone" placeholder="Enter your second address (optional)" maxlength="100">
                         </div>
                         </div>
                     </div>
@@ -77,7 +76,7 @@
                               <i class="fa fa-times-circle" style="color: firebrick;"></i>
                               <span class="text-danger bg-light">City cannot be empty</span>
                             </div>
-                            <input formControlName="city" type="text" class="form-control" name="first_name" id="first_name" placeholder="City"  maxlength="100" required>
+                            <input value="{{this.userProfile.city}}" formControlName="city" type="text" class="form-control" name="first_name" id="first_name" placeholder="City"  maxlength="100" required>
                         </div>
                         <div class="col-2">
                             <label for="state"><h4>State</h4></label>
@@ -85,7 +84,7 @@
                               <i class="fa fa-times-circle" style="color: firebrick;"></i>
                               <span class="text-danger bg-light">Please select a state</span>
                             </div>
-                            <select formControlName="state" style="height: 38px;" name="state" id="state" required>
+                            <select value="{{this.userProfile.state}}" formControlName="state" style="height: 38px;" name="state" id="state" required>
                                 <option value="" selected="selected">Select a State</option>
                                 <option value="AL">Alabama</option>
                                 <option value="AK">Alaska</option>
@@ -146,15 +145,15 @@
                               <i class="fa fa-times-circle" style="color: firebrick;"></i>
                               <span class="text-danger bg-light">Please enter a valid zipcode</span>
                             </div>
-                              <input formControlName="zipcode" type="text" class="form-control" name="zipcode" id="zipcode" placeholder="Enter zipcode" title="enter your zipcode." maxlength="9" minlength="5" required>
+                              <input value="{{this.userProfile.zipcode}}" formControlName="zipcode" type="text" class="form-control" name="zipcode" id="zipcode" placeholder="Enter zipcode" title="enter your zipcode." maxlength="9" minlength="5" required>
                           </div>
                         </div>
                     </div>
                       <div class="form-group">
                            <div class="col-12">
                                 <br>
-                                <button [disabled]="!profileForm.valid" *ngIf="!isEdit" (click)="onSubmit()" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
-                                <button *ngIf="isEdit" (click) ="clickEdit()" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Edit</button>
+                                <button [disabled]="!profileForm.valid" (click)="onSubmit()" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
+                                <button (click)="clickEdit()" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Edit</button>
                                  <button class="btn btn-lg btn-dark mx-2" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
                             </div>
                       </div>
