--- a/Fuel-Front-End/src/app/profile/profile.component.html
+++ b/Fuel-Front-End/src/app/profile/profile.component.html
@@ -9,12 +9,16 @@
   		<div class="col-sm-3"><!--left col-->
       <div class="text-center">
         <img src="{{ this.userProfile.photoURL}}" class="avatar img-circle img-thumbnail avatar-pic" alt="avatar">
-        <h6>Upload photo.</h6>
-        <input type="file" (change)="onFileSelected($event)" class="text-center center-block file-upload">
+        <h6>Profile Picture</h6>
+        <div>
+          <div *ngIf="!fileUploaded" style="font-size: 0.8em; padding-right: 10px;">
+            <i class="fa fa-times-circle" style="color: firebrick;"></i>
+            <span class="text-danger bg-light">Please upload a profile picture</span>
+          </div>
+        <input type="file" (change)="onFileSelected($event)" class="text-center center-block file-upload"/>
+      </div>
       </div><br>
           <div class="panel panel-default">
-            <div class="panel-heading">Website <i class="fa fa-link fa-1x"></i></div>
-            <div class="panel-body"><a href="http://bootnipets.com">nnp.com</a></div>
           </div>
           <ul class="list-group">
             <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i></li>
@@ -152,7 +156,7 @@
                       <div class="form-group">
                            <div class="col-12">
                                 <br>
-                                <button [disabled]="!profileForm.valid" (click)="onSubmit()" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
+                                <button [disabled]="!profileForm.valid || !fileUploaded" (click)="onSubmit()" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
                                 <button (click)="clickEdit()" class="btn btn-lg btn-success mx-2" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Edit</button>
                                  <button class="btn btn-lg btn-dark mx-2" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
                             </div>
