--- a/Fuel-Front-End/src/app/profile/profile.component.html
+++ b/Fuel-Front-End/src/app/profile/profile.component.html
@@ -34,9 +34,15 @@
                           <div class="row">
                           <div class="col-12">
                               <label for="full_name"><h4>Full name</h4></label>
-                              <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.fullname.invalid && profileForm.controls.fullname.touched">
+                              <div *ngIf="profileForm.controls.fullname.invalid && (profileForm.controls.fullname.dirty || profileForm.controls.fullname.touched)" class ="text-danger">
+                              <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.fullname.errors.required">
                                 <i class="fa fa-times-circle" style="color: firebrick;"></i>
-                                <span class="text-danger bg-light">Full name cannot be empty</span>
+                                <span class="bg-light">Full name cannot be empty</span>
+                              </div>
+                              <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.fullname.errors.pattern">
+                                <i class="fa fa-times-circle" style="color: firebrick;"></i>
+                                <span class="bg-light">Please enter a valid name</span>
+                              </div>
                               </div>
                               <input value="{{this.userProfile.fullname}}" formControlName="fullname" type="text" class="form-control" name="full_name" id="full_name" placeholder="Enter your full name" maxlength="50" required/>
                           </div>
@@ -46,9 +52,11 @@
                           <div class="row">
                           <div class="col-12">
                               <label for="phone"><h4>Address 1</h4></label>
-                              <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.address1.invalid && profileForm.controls.address1.touched">
+                              <div *ngIf="profileForm.controls.address1.invalid && (profileForm.controls.address1.dirty || profileForm.controls.address1.touched)" class ="text-danger">
+                              <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.address1.errors.required">
                                 <i class="fa fa-times-circle" style="color: firebrick;"></i>
-                                <span class="text-danger bg-light">Address 1 cannot be empty</span>
+                                <span class="text-danger bg-light">Address cannot be empty</span>
+                              </div>
                               </div>
                               <input value="{{this.userProfile.address1}}" formControlName="address1" type="text" class="form-control" name="phone" id="phone" placeholder="Enter your address" maxlength="100" required>
                           </div>
@@ -67,10 +75,16 @@
                         <div class="row">
                         <div class="col-5">
                             <label for="first_name"><h4>City</h4></label>
-                            <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.city.invalid && profileForm.controls.city.touched">
-                              <i class="fa fa-times-circle" style="color: firebrick;"></i>
-                              <span class="text-danger bg-light">City cannot be empty</span>
-                            </div>
+                            <div *ngIf="profileForm.controls.city.invalid && (profileForm.controls.city.dirty || profileForm.controls.city.touched)" class ="text-danger">
+                              <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.city.errors.required">
+                                <i class="fa fa-times-circle" style="color: firebrick;"></i>
+                                <span class="bg-light">City cannot be empty</span>
+                              </div>
+                              <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.city.errors.pattern">
+                                <i class="fa fa-times-circle" style="color: firebrick;"></i>
+                                <span class="bg-light">Please enter a valid city</span>
+                              </div>
+                              </div>
                             <input value="{{this.userProfile.city}}" formControlName="city" type="text" class="form-control" name="first_name" id="first_name" placeholder="City"  maxlength="100" required>
                         </div>
                         <div class="col-2">
@@ -136,10 +150,16 @@
                         </div>
                         <div class="col-5">
                             <label for="zipcode"><h4>Zipcode</h4></label>
-                            <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.zipcode.invalid && profileForm.controls.zipcode.touched">
-                              <i class="fa fa-times-circle" style="color: firebrick;"></i>
-                              <span class="text-danger bg-light">Please enter a valid zipcode</span>
-                            </div>
+                            <div *ngIf="profileForm.controls.zipcode.invalid && (profileForm.controls.zipcode.dirty || profileForm.controls.zipcode.touched)" class ="text-danger">
+                              <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.zipcode.errors.required">
+                                <i class="fa fa-times-circle" style="color: firebrick;"></i>
+                                <span class="bg-light">Zip code cannot be empty</span>
+                              </div>
+                              <div class="py-1" style="font-size: 0.8em;" *ngIf="profileForm.controls.zipcode.errors.pattern">
+                                <i class="fa fa-times-circle" style="color: firebrick;"></i>
+                                <span class="bg-light">Please enter a valid 5 digit zipcode</span>
+                              </div>
+                              </div>
                               <input value="{{this.userProfile.zipcode}}" formControlName="zipcode" type="text" class="form-control" name="zipcode" id="zipcode" placeholder="Enter zipcode" title="enter your zipcode." maxlength="9" minlength="5" required>
                           </div>
                         </div>
