upload-profile-pic-bug-fixes

--- a/Fuel-Front-End/src/app/navbar/navbar.component.html
+++ b/Fuel-Front-End/src/app/navbar/navbar.component.html
@@ -34,12 +34,12 @@
           </ul>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item px-3 py-3">
-              <a href="#"><i class="nav-link icon-header navbar-brand fa fa-phone-square fa-2x"></i></a>
-              <a href="#"><i class="nav-link icon-header navbar-brand fa fa-facebook fa-2x"></i></a>
-              <a href="#"><i class="nav-link icon-header navbar-brand fa fa-twitter-square fa-2x"></i></a>
-              <a routerLink="/profile"><i class="nav-link icon-header navbar-brand fa fa-linkedin fa-2x"></i></a>
-              <a *ngIf="isLogin && !hasProfilePic" routerLink="/profile" href="#"><img class="profile-pic-nav" src="/assets/images/pro5.png" width="35" height="35"></a>
-              <a *ngIf="isLogin && hasProfilePic" routerLink="/profile" href="#"><img class="profile-pic-nav" src="{{profilePicUrlUploaded}}" width="35" height="35"></a>
+              <a ><i class="nav-link icon-header navbar-brand fa fa-phone-square fa-2x"></i></a>
+              <a><i class="nav-link icon-header navbar-brand fa fa-facebook fa-2x"></i></a>
+              <a><i class="nav-link icon-header navbar-brand fa fa-twitter-square fa-2x"></i></a>
+              <a><i class="nav-link icon-header navbar-brand fa fa-linkedin fa-2x"></i></a>
+              <a *ngIf="isLogin && !hasProfilePic" ><img class="profile-pic-nav" src="/assets/images/pro5.png" width="35" height="35"></a>
+              <a *ngIf="isLogin && hasProfilePic"><img class="profile-pic-nav" src="{{profilePicUrlUploaded}}" width="35" height="35"></a>
             </li>
           </ul>
     </div>
